# internal-ops-copilot

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml
agent-api/: README.md  mypy.ini  pyproject.toml  ruff.toml
agent-api/scripts/: dev.ps1  dev.sh  test.ps1
agent-api/src/internal_ops_copilot/: main.py
agent-api/src/internal_ops_copilot/app/: config.py  errors.py  factory.py  logging_config.py  rate_limit.py
agent-api/src/internal_ops_copilot/web/middleware/: correlation.py  rate_limit.py  tracing.py
agent-api/src/internal_ops_copilot/web/routes/: health.py
agent-api/src/internal_ops_copilot/web/routes/v1/: meta.py
agent-api/tests/e2e/: test_auth_e2e.py  test_health_e2e.py  test_rate_limit_e2e.py  test_v1_ping_e2e.py
agent-api/tests/unit/: test_auth_unit.py  test_rate_limit_unit.py
java-demo/: README.md  pom.xml
java-demo/src/main/java/com/example/copilot/: JavaDemoApplication.java
java-demo/src/main/java/com/example/copilot/web/: HealthController.java
java-demo/src/test/java/com/example/copilot/: HealthControllerTest.java
